--- a/src/app/recipes/recipe-detail/recipe-detail.page.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.page.html
@@ -4,6 +4,12 @@
       <ion-back-button defaultHref="/recipes"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ loadedRecipe.title }}</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onDelete()">
+        <ion-icon slot="icon-only" name="trash">
+        </ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
