--- a/src/app/recipes/recipe-detail/recipe-detail.page.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>{{ loadedRecipe.title }}</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onDelete()">
+      <ion-button (click)="onDeleteRecipe()">
         <ion-icon slot="icon-only" name="trash">
         </ion-icon>
       </ion-button>
